--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^20.11.1",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.4",
